# Project_REMY

./: README.md  Untitled15.ipynb  [현석씨확인요청] waffle_bridge_client.ccp  [현석씨확인요청] yolo_state_node.py  aruco_client.py  depth_media_filter.py  depth_media_led_pos.py  depth_media_ledch_seq.py  depth_onnx.py  kitchen_model_v2_320.ncnn.param  voice_audio_node.py  voice_audio_node_0318.py  voice_test.py  waffle_bridge_client.cpp  yolo_state_node.py  음성 TTS 표 정리
Github_Guide/: README.md
TCPserver/: idpasswd.txt  iot_server  사용법.txt
linear_rail_aduino_client/: linear_260316.ino  linear_260317.ino
model/: object_detection_yolov5s.ipynb
omx_pick_place/: README.md  joint_limits.yaml
omx_pick_place/launch/: pose_to_joint_execute_server.launch.py
omx_pick_place/src/: pick_place_node.cpp  pose_to_joint_execute_server.cpp
omxa_depth/: omxa_depth  omxa_depth.py
remy_client/: led_client_button.py  led_client_button_vi.py  stove_client.c
remy_eye/: depth_onnx_def.py  depth_onnx_def_aruco.py
ros2_tcp_bridge_client/: CMakeLists.txt  README.md  README.txt  hardware_controller_manager.yaml  omx_f.launch.py  omx_f.ros2_control.xacro  omx_f_arm.urdf.xacro  package.xml
ros2_tcp_bridge_client/src/: tcp_bridge_client.cpp
stove_aduino/: iot_client_bluetooth.c  stove.ino
turtlebot_waffle/: [현석씨확인요청] waffle_bridge_client.cpp  waffle_bridge_client.cpp  yolo_state_node.py
voice_controller/: voice_audio_node.py  voice_test.py
